@@ -3,7 +3,7 @@ apply plugin: 'application'
 
 ext.moduleName = 'blogbitix.http'
 mainClassName = "$moduleName/io.github.picodotdev.blogbitix.http.Main"
-
+println sourceSets.main.runtimeClasspath.asPath
 repositories {
     jcenter()
 }
@@ -30,4 +30,12 @@ run {
         ]
         classpath = files()
     }
+}
+
+task clearJlink(type: Delete) {
+  delete "${distsDir}/jlink"
+}
+
+task jlink(dependsOn: [clearJlink, compileJava], type: Exec) {
+     commandLine "jlink", "--module-path", sourceSets.main.runtimeClasspath.asPath, "--add-modules", moduleName, "--launcher", "run=${mainClassName}", "--output", "${distsDir}/jlink"
 }
